--- a/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
+++ b/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
@@ -1,58 +1,56 @@
-<RelativeLayout
+<?xml version="1.0" encoding="utf-8"?>
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/relative_layout_security"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:tag="cards main container"
-    >
+    android:id="@+id/card_view"
+    android:theme="@style/SecurityCardView"
+    android:layout_height="0dp"
+    android:layout_width="wrap_content">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_view"
-        android:theme="@style/SecurityCardView"
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/left_right_margin_column"
-        android:layout_marginRight="@dimen/left_right_margin_column"
-        android:layout_width="@dimen/whole_screen_width">
+        android:orientation="horizontal">
 
-        <TableLayout
+            <TextView
+                android:id="@+id/cusip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+            <TextView
+                android:id="@+id/securityType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/issueDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TableRow>
-                <TextView
-                    android:id="@+id/cusip"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginTop="@dimen/inter_row_margin_top"
-                    android:text=""
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    />
-            </TableRow>
-            <TableRow>
-                <TextView
-                    android:id="@+id/issueDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginTop="@dimen/inter_row_margin_top"
-                    android:text=""
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    />
-            </TableRow>
-            <TableRow>
-                <TextView
-                    android:id="@+id/pricePer100"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginTop="@dimen/inter_row_margin_top"
-                    android:text=""
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
-            </TableRow>
+            android:text=""
+            />
 
-        </TableLayout>
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/auctionDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            />
 
-</RelativeLayout>
+    </LinearLayout>
+</com.google.android.material.card.MaterialCardView>
