--- a/investingguideandroidui/app/src/main/res/values-night/themes.xml
+++ b/investingguideandroidui/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,18 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="SecurityCardView" >
+        <item name="cornerRadius">20sp</item>
+        <item name="cardPreventCornerOverlap">true</item>
+        <item name="cardElevation">20sp</item>
+        <item name="useCompatPadding">true</item>
+        <item name="cardBackgroundColor">@color/cardview_dark_background</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif-thick</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:checkable">true</item>
+    </style>
 </resources>
