--- a/investingguideandroidui/app/src/main/res/values/dimens.xml
+++ b/investingguideandroidui/app/src/main/res/values/dimens.xml
@@ -13,7 +13,7 @@
     <dimen name="standard_text_sie">25sp</dimen>
     <dimen name="medium_text_sie">36sp</dimen>
     <dimen name="large_text_sie">46sp</dimen>
-    <dimen name="button_text_sie">25sp</dimen>
+    <dimen name="button_text_size">25sp</dimen>
     <dimen name="whole_screen_width">0dp</dimen>
     <dimen name="whole_available_width">0dp</dimen>
     <dimen name="whole_available_height">0dp</dimen>
