--- a/investingguideandroidui/app/src/main/res/layout/display_securities_view.xml
+++ b/investingguideandroidui/app/src/main/res/layout/display_securities_view.xml
@@ -1,14 +1,35 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey_300"
     tools:context=".SecuritiesViewActivity">
 
+    <Button
+        android:id="@+id/return_search_menu_top_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/return_main_activity_button_label"
+        android:layout_marginTop="1dp"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/securities_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
+        android:visibility="visible"
+        android:layout_marginTop="1dp"
+        android:layout_below="@id/return_search_menu_top_button"
+        />
+
+    <Button
+        android:id="@+id/return_search_menu_bottom_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/return_main_activity_button_label"
+        android:layout_below="@id/securities_recycler_view"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="1dp"/>
 
 </RelativeLayout>
