--- a/investingguideandroidui/app/src/main/res/layout/display_securities_view.xml
+++ b/investingguideandroidui/app/src/main/res/layout/display_securities_view.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey_300"
-    tools:context=".SecuritiesViewActivity">
+    tools:context=".SecuritiesViewActivity"
+    >
 
     <Button
         android:id="@+id/return_search_menu_top_button"
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:text="@string/return_main_activity_button_label"
         android:layout_marginTop="1dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/securities_recycler_view"
         android:layout_width="match_parent"
