--- a/investingguideandroidui/app/src/main/res/values/themes.xml
+++ b/investingguideandroidui/app/src/main/res/values/themes.xml
@@ -14,9 +14,9 @@
         <!-- Customize your theme here. -->
     </style>
     <style name="SecurityCardView" >
-        <item name="cornerRadius">20sp</item>
+        <item name="cornerRadius">20dp</item>
         <item name="cardPreventCornerOverlap">true</item>
-        <item name="cardElevation">20sp</item>
+        <item name="cardElevation">20dp</item>
         <item name="cardBackgroundColor">@color/cardview_dark_background</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
@@ -25,8 +25,8 @@
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
         <item name="android:checkable">true</item>
-        <item name="android:layout_marginTop">5dp</item>
-        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
 
     </style>
 </resources>
