--- a/investingguideandroidui/app/src/main/res/layout/activity_main.xml
+++ b/investingguideandroidui/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -119,15 +119,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.71" />
+        ads:layout_constraintGuide_percent="0.78" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/bottomBorder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.87" />
-
+        ads:layout_constraintGuide_percent="0.88" />
 
 
     <DatePicker
@@ -170,14 +169,14 @@
         android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="108dp"
         android:gravity="center"
         android:text="@string/security_search_type"
         app:layout_constraintBottom_toTopOf="@id/betweenTimeLineAndSubmitButton"
         app:layout_constraintEnd_toStartOf="@id/secondLeftBorder"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/leftBorder"
-        app:layout_constraintTop_toTopOf="@id/betweenEndDateAndTimeline" />
+        app:layout_constraintTop_toTopOf="@id/betweenEndDateAndTimeline"
+         />
 
     <RadioGroup
         android:id="@+id/auctionOrSearch"
@@ -210,21 +209,28 @@
         android:gravity="center"
         android:text="@string/search_button_label"
         android:textSize="@dimen/button_text_size"
+        app:layout_constraintBottom_toTopOf="@id/bottomBorder"
         app:layout_constraintEnd_toStartOf="@id/rightBorder"
         app:layout_constraintStart_toStartOf="@id/leftBorder"
-        app:layout_constraintTop_toBottomOf="@id/betweenTimeLineAndSubmitButton"
-        app:layout_constraintBottom_toTopOf="@id/bottomBorder"/>
+        app:layout_constraintTop_toBottomOf="@id/betweenTimeLineAndSubmitButton" />
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/googleAdvertisement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
         ads:adUnitId="ca-app-pub-7397609705602882/7659433639"
-        app:layout_constraintEnd_toStartOf="@id/rightBorder"
-        app:layout_constraintStart_toStartOf="@id/leftBorder"
-        app:layout_constraintBottom_toBottomOf="@id/bottomBorder"/>
+        ads:layout_constraintTop_toBottomOf="@+id/bottomBorder"
+        ads:layout_constraintStart_toEndOf="@id/leftBorder"
+        ads:layout_constraintEnd_toStartOf="@id/rightBorder"
+        ads:layout_constraintBottom_toTopOf="@+id/lastBottomBorder" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/lastBottomBorder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.99" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
