--- a/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
+++ b/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="6dp"
-    android:layout_marginBottom="6dp"
-    android:layout_marginLeft="6dp"
-    android:layout_marginRight="6dp"
+    android:layout_marginTop="@dimen/inter_row_margin_top"
+    android:layout_marginBottom="@dimen/inter_row_margin_top"
+    android:layout_marginLeft="@dimen/left_right_margin_column"
+    android:layout_marginRight="@dimen/left_right_margin_column"
     >
 
     <com.google.android.material.card.MaterialCardView
@@ -18,6 +18,8 @@
         <TableLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/inter_row_margin_top"
+            android:layout_marginLeft="@dimen/left_right_margin_column"
             android:orientation="horizontal">
             <TableRow
                     android:layout_width="match_parent"
@@ -26,6 +28,7 @@
                     android:id="@+id/cusip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text=""
                     />
             </TableRow>
             <TableRow
@@ -53,6 +56,16 @@
                 android:layout_height="wrap_content">
                 <TextView
                     android:id="@+id/auctionDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    />
+            </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/maturityDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
