shifted textviews in security card viewby a few dps

--- a/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
+++ b/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
@@ -19,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/inter_row_margin_top"
+            android:layout_marginBottom="@dimen/inter_row_margin_top"
             android:layout_marginLeft="@dimen/left_right_margin_column"
             android:orientation="horizontal">
             <TableRow
