Card Touch Not Working Yet

--- a/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
+++ b/investingguideandroidui/app/src/main/res/layout/security_card_view.xml
@@ -72,6 +72,15 @@
                     android:text=""
                     />
             </TableRow>
+            <TableRow>
+            <TextView
+                android:id="@+id/generatedSecurityUUID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="UniqueSystemID"
+
+                />
+        </TableRow>
         </TableLayout>
     </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
