--- a/investingguideandroidui/app/src/main/res/values/themes.xml
+++ b/investingguideandroidui/app/src/main/res/values/themes.xml
@@ -16,17 +16,15 @@
     <style name="SecurityCardView" >
         <item name="cornerRadius">6dp</item>
         <item name="cardElevation">10dp</item>
+        <item name="useCompatPadding">true</item>
         <item name="cardBackgroundColor">@color/cardview_dark_background</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:fontFamily">sans-serif-thick</item>
+        <item name="android:fontFamily">roboto</item>
         <item name="android:textStyle">normal</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
         <item name="android:checkable">true</item>
-        <!--
-        <item name="android:layout_marginTop">10dp</item>
-        <item name="android:layout_marginBottom">10dp</item>
-        -->
+
     </style>
 </resources>
